fix overflow and link

--- a/index.css
+++ b/index.css
@@ -86,7 +86,7 @@ code {
 }
 
 .post-title {
-	padding: 5px;
+	padding-top: 15px;
 }
 
 .post-prev {
